# rules_node_addon

./: MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yml  publish-bcr.yml
examples/: BUILD.bazel  hello.cc  test.js  test.mjs
examples/full/: BUILD.bazel  MODULE.bazel  addon.cc  bun.bzl  bun_run_test.cmd.tpl  bun_run_test.sh.tpl  hello_full.cc  npm_deps.bzl  package-lock.json  package.json  run_tsx.mjs  test.ts  tsconfig.json
examples/hello/: BUILD.bazel  test.cjs
examples/node26/: BUILD.bazel  MODULE.bazel  hello26.cc  test.cjs  test.mjs
examples/node_version_pin/: BUILD.bazel  MODULE.bazel  test.cjs  test.mjs  version.cc
node_addon/: BUILD.bazel  defs.bzl  extensions.bzl  windows.bzl
