module(
    name = "rules_node_addon",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "3.2.2", dev_dependency = True)

bazel_dep(name = "node_addon_api", version = "8.8.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

node_addon = use_extension("//node_addon:extensions.bzl", "node_addon")
use_repo(node_addon, "node_addon_node_api")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(include_headers = True)
use_repo(node, "nodejs_toolchains")
