load("@aspect_rules_js//js:defs.bzl", "js_test")
load("//node_addon:defs.bzl", "node_addon")

node_addon(
    name = "hello",
    srcs = ["hello.cc"],
    copts = select({
        "@platforms//os:windows": ["/std:c++17"],
        "//conditions:default": ["-std=c++17"],
    }),
)

js_test(
    name = "hello_cjs_test",
    data = [":hello"],
    entry_point = "test.cjs",
)

js_test(
    name = "hello_mjs_test",
    data = [":hello"],
    entry_point = "test.mjs",
)
