load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "windows.bzl",
])

_NAPI_VERSIONS = [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
]

string_flag(
    name = "napi_version",
    build_setting_default = "",
    values = [""] + _NAPI_VERSIONS,
)

[config_setting(
    name = "napi_version_%s_enabled" % version,
    flag_values = {
        ":napi_version": version,
    },
) for version in _NAPI_VERSIONS]
