load("@rules_node_addon//node_addon:defs.bzl", "node_addon")
load("//:bun.bzl", "bun_run_test")

node_addon(
    name = "hello_full",
    srcs = ["hello_full.cc"],
)

_TEST_DATA = [
    ":hello_full",
    "@rules_node_addon_full_npm//:node_modules",
    "package.json",
    "run_tsx.mjs",
    "test.ts",
]

bun_run_test(
    name = "full_tsx_test",
    data = _TEST_DATA,
    runfiles_env = {
        "ADDON_PATH": "_main/hello_full.node",
    },
    runfiles_env_files = {
        "@rules_node_addon_full_npm//:node_modules/tsx/dist/cli.mjs": "TSX_CLI_PATH",
        "@rules_node_addon_full_npm//:node_modules/tsx/dist/loader.mjs": "TSX_LOADER_PATH",
    },
    script = "test:tsx",
)

bun_run_test(
    name = "full_bun_test",
    data = _TEST_DATA,
    runfiles_env = {
        "ADDON_PATH": "_main/hello_full.node",
    },
    runfiles_env_files = {
        "@rules_node_addon_full_npm//:node_modules/tsx/dist/cli.mjs": "TSX_CLI_PATH",
        "@rules_node_addon_full_npm//:node_modules/tsx/dist/loader.mjs": "TSX_LOADER_PATH",
    },
    script = "test:bun",
)
