load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_node_addon//node_addon:defs.bzl", "node_addon")
load("//:bun.bzl", "bun_run_test")

node_addon(
    name = "hello_full",
    srcs = ["hello_full.cc"],
)

ts_project(
    name = "test_ts",
    srcs = ["test.ts"],
    declaration = True,
    out_dir = "dist",
    root_dir = ".",
    source_map = False,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    validate = False,
)

copy_file(
    name = "hello_full_dist",
    src = ":hello_full",
    out = "dist/hello_full.node",
)

js_test(
    name = "full_js_test",
    data = [
        ":hello_full_dist",
        ":test_ts",
        "package.json",
    ],
    entry_point = "dist/test.js",
)

bun_run_test(
    name = "full_bun_test",
    data = [
        ":hello_full",
        "package.json",
        "test.ts",
    ],
    runfiles_env = {
        "ADDON_PATH": "_main/hello_full.node",
    },
    script = "test:bun",
    # Bun currently crashes when requiring this Node-API addon on Windows.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
