module(
    name = "rules_node_addon_full_example",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_node_addon", version = "0.0.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

local_path_override(
    module_name = "rules_node_addon",
    path = "../..",
)

node_addon_windows = use_extension("@rules_node_addon//node_addon:windows.bzl", "node_addon_windows")
use_repo(node_addon_windows, "windows_node_api")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(include_headers = True)
use_repo(node, "nodejs_toolchains")

bun = use_extension("//:bun.bzl", "bun")
use_repo(bun, "rules_node_addon_bun_host")

npm_deps = use_extension("//:npm_deps.bzl", "npm_deps")
npm_deps.install(
    name = "rules_node_addon_full_npm",
    package_json = "//:package.json",
    package_lock = "//:package-lock.json",
)
use_repo(npm_deps, "rules_node_addon_full_npm")
