module(
    name = "rules_node_addon_full_example",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_node_addon", version = "1.0.3")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")

local_path_override(
    module_name = "rules_node_addon",
    path = "../..",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(include_headers = True)
use_repo(node, "nodejs_toolchains")

bun = use_extension("//:bun.bzl", "bun")
use_repo(bun, "rules_node_addon_bun_host")

ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
ts.deps()
use_repo(ts, "npm_typescript")
