load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@rules_node_addon//node_addon:defs.bzl", "node_addon")

node_addon(
    name = "version",
    srcs = ["version.cc"],
)

js_test(
    name = "version_cjs_test",
    data = [":version"],
    entry_point = "test.cjs",
)

js_test(
    name = "version_mjs_test",
    data = [":version"],
    entry_point = "test.mjs",
)
