module(
    name = "rules_node_addon_node_version_pin_example",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_node_addon", version = "0.0.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

local_path_override(
    module_name = "rules_node_addon",
    path = "../..",
)

node_addon_windows = use_extension("@rules_node_addon//node_addon:windows.bzl", "node_addon_windows")
node_addon_windows.toolchain(
    headers_sha256 = "9344eddda6621e46d77b26f1b93db25a52592f9eb199f300440fe3c30802f186",
    node_version = "24.13.0",
    win_arm64_node_lib_sha256 = "afef88b389be8ac30974d2cf69de26001f95f1e9efe1811f2e8467c4cdfe05d0",
    win_x64_node_lib_sha256 = "be205f2934c17fbd56ce6cdfcfbeb2f6a85061d5141e7a58eba240a8477a12fd",
)
use_repo(node_addon_windows, "windows_node_api")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    include_headers = True,
    node_repositories = {
        "24.13.0-darwin_amd64": ("node-v24.13.0-darwin-x64.tar.gz", "node-v24.13.0-darwin-x64", "6f03c1b48ddbe1b129a6f8038be08e0899f05f17185b4d3e4350180ab669a7f3"),
        "24.13.0-darwin_arm64": ("node-v24.13.0-darwin-arm64.tar.gz", "node-v24.13.0-darwin-arm64", "d595961e563fcae057d4a0fb992f175a54d97fcc4a14dc2d474d92ddeea3b9f8"),
        "24.13.0-linux_amd64": ("node-v24.13.0-linux-x64.tar.xz", "node-v24.13.0-linux-x64", "e798599612f4bb71333a3397ab0d095fd62214e115aea45aa858a145fc72d67e"),
        "24.13.0-linux_arm64": ("node-v24.13.0-linux-arm64.tar.xz", "node-v24.13.0-linux-arm64", "aa881151bd0f9f154a0424dd60a72e9ce10672619121658c278a24327ef46831"),
        "24.13.0-windows_amd64": ("node-v24.13.0-win-x64.zip", "node-v24.13.0-win-x64", "ca2742695be8de44027d71b3f53a4bdb36009b95575fe1ae6f7f0b5ce091cb88"),
        "24.13.0-windows_arm64": ("node-v24.13.0-win-arm64.zip", "node-v24.13.0-win-arm64", "92b9f9b0c0c123e11e4afc535f0ec19cd987465eea506427553a49971364158a"),
    },
    node_version = "24.13.0",
)
use_repo(node, "nodejs_toolchains")
