module(
    name = "rules_node_addon_node_version_pin_example",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_node_addon", version = "1.0.2")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

local_path_override(
    module_name = "rules_node_addon",
    path = "../..",
)

node_addon_windows = use_extension("@rules_node_addon//node_addon:windows.bzl", "node_addon_windows")
node_addon_windows.toolchain(
    headers_sha256 = "9344eddda6621e46d77b26f1b93db25a52592f9eb199f300440fe3c30802f186",
    node_version = "24.13.0",
    win_arm64_node_lib_sha256 = "afef88b389be8ac30974d2cf69de26001f95f1e9efe1811f2e8467c4cdfe05d0",
    win_x64_node_lib_sha256 = "be205f2934c17fbd56ce6cdfcfbeb2f6a85061d5141e7a58eba240a8477a12fd",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    include_headers = True,
    node_version = "24.13.0",
)
use_repo(node, "nodejs_toolchains")
